--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "$schema": "http://json-schema.org/draft-04/schema#",
+  "title": "JSON schema for NPM package.json files",
   "name": "bewoca-blog",
   "private": true,
   "version": "0.1.0",
@@ -11,18 +13,18 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "knex": "<0.20.0",
-    "sqlite3": "latest",
-    "strapi": "3.3.4",
-    "strapi-admin": "3.3.4",
-    "strapi-connector-bookshelf": "3.3.4",
-    "strapi-plugin-content-manager": "3.3.4",
-    "strapi-plugin-content-type-builder": "3.3.4",
-    "strapi-plugin-email": "3.3.4",
-    "strapi-plugin-upload": "3.3.4",
-    "strapi-plugin-users-permissions": "3.3.4",
-    "strapi-provider-upload-cloudinary": "^3.3.4",
-    "strapi-utils": "3.3.4"
+    "knex": ["<0.20.0"],
+    "sqlite3": ["latest"],
+    "strapi": ["3.3.4"],
+    "strapi-admin": ["3.3.4"],
+    "strapi-connector-bookshelf": ["3.3.4"],
+    "strapi-plugin-content-manager": ["3.3.4"],
+    "strapi-plugin-content-type-builder": ["3.3.4"],
+    "strapi-plugin-email": ["3.3.4"],
+    "strapi-plugin-upload": ["3.3.4"],
+    "strapi-plugin-users-permissions": ["3.3.4"],
+    "strapi-provider-upload-cloudinary": ["^3.3.4"],
+    "strapi-utils": ["3.3.4"]
   },
   "author": {
     "name": "A Strapi developer"
